# Irksome

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  be.py  butcher.py  demo_dolfinx.py  form.py  genindex.html  index.html  irksome.backends.html  irksome.html  irksome.ufl.html  nonlinear-Solin2.py  nonlinear.py  notes  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
IRKsome/: ButcherTableaux.py  __init__.py  butcher.py  deriv.py  formmanipulation.py  getForm.py  getFormT.py  stepper.py
UNKNOWN.egg-info/: SOURCES.txt
_modules/: collections.html  index.html
_sources/: index.rst.txt  irksome.backends.rst.txt  irksome.rst.txt  irksome.ufl.rst.txt
_static/: documentation_options.js  fenics.css
demos/: Makefile  RTwave.py  RTwaveCN.py  RTwave_onestage.py  be.py  cahnhilliard.py  demo1.py  demo2.py  demo_RTwave.py  demo_RTwave.py.html  demo_RTwave_PEP.py.html  demo_RTwave_adaptive_stepper.py  demo_RTwave_galerkin.py.html  demo_RTwave_stepper.py  demo_adaptive_stepper.py  demo_bbm.py.html  demo_bbm_aux.py.html  demo_bbm_galerkin.py.html  demo_bounded_heat.py.html  demo_cahnhilliard.py  demo_dirk_parameters.py  demo_dirk_parameters.py.html  demo_heat.py.html  demo_heat_adapt.py.html  demo_heat_dirk.py.html  demo_heat_mg.py.html  demo_heat_mg_dg.py.html  demo_heat_multistep.py.html  demo_heat_pc.py  demo_heat_pc.py.html  demo_heat_rana.py.html  demo_heat_structure.py.html  demo_lowlevel_homogbc.py.html  demo_lowlevel_inhomogbc.py.html  demo_lowlevel_mixed_heat.py.html  demo_mg.py  demo_mixed_heat.py  demo_mixed_heat.py.html  demo_monodomain_FHN.py.html  demo_monodomain_FHN_dirkimex.py.html  (+14 more)
(+310 files in other folders)
