[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "IRKsome"
version = "0.0.1"
authors = [
  {name = "Rob Kirby", email = "Robert_Kirby@baylor.edu"},
  {name = "Jorge Marchena Menendez"},
]
description = "A library for fully implicit Runge-Kutta methods in Firedrake"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://www.firedrakeproject.org/Irksome"
Repository = "https://github.com/firedrakeproject/Irksome.git"

[project.optional-dependencies]
docs = ["sphinx", "sphinxcontrib-bibtex"]

[tool.pytest.ini_options]
xfail_strict = true
